<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundTertiary"
        android:orientation="vertical">


        <com.mg.shopping.textviewutil.NormalTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nm_txt_size"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="30dp"
            android:textColor="?attr/colorTextQuinary"
            android:text="@string/ask_question"></com.mg.shopping.textviewutil.NormalTextview>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:background="@drawable/bg_special_instructions"
            android:gravity="center">


            <com.mg.shopping.edittextutil.NormalEditText
                android:id="@+id/edit_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorBackgroundTertiary"
                android:textSize="@dimen/nm_txt_size"
                android:hint="@string/write_your_question"
                android:gravity="top"
                android:textColor="?attr/colorTextSecondary"></com.mg.shopping.edittextutil.NormalEditText>


        </LinearLayout>

        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
            android:id="@+id/layout_add_to_cart"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            app:corner_radius="20dp"
            android:background="?attr/colorBackgroundSenary"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <com.mg.shopping.textviewutil.NormalTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/nm_txt_size"
                android:textColor="?attr/colorTextTertiary"
                android:text="@string/submit"></com.mg.shopping.textviewutil.NormalTextview>

        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


    </LinearLayout>


</RelativeLayout>