<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:gravity="center"
        android:paddingEnd="30dp">



        <com.mg.shopping.textviewutil.LabelTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorBackgroundQuinary"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="@dimen/lb_txt_size"
            android:text="@string/phone_authentication"></com.mg.shopping.textviewutil.LabelTextview>




        <com.mg.shopping.edittextutil.NormalEditText
            android:id="@+id/edit_phone_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPhonetic"
            android:textSize="@dimen/tagline_text_size"
            android:textColor="?attr/colorTextSecondary"
            android:textColorHint="?attr/colorTextSecondary"
            android:hint="@string/phone_number"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:paddingStart="10dp"></com.mg.shopping.edittextutil.NormalEditText>


        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
            android:id="@+id/layout_done"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="15dp"
            android:background="?attr/colorBackgroundSenary"
            app:corner_radius="15dp"
            android:gravity="center">



            <com.mg.shopping.textviewutil.NormalTextview
                android:id="@+id/txt_done"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:visibility="visible"
                android:textSize="@dimen/normal_text_size"
                android:textColor="?attr/colorTextTertiary"
                android:text="@string/verify"></com.mg.shopping.textviewutil.NormalTextview>


            <net.bohush.geometricprogressview.GeometricProgressView
                android:id="@+id/progress_bar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                app:gp_color="@color/white"
                app:gp_duration="800"
                android:visibility="gone"
                app:gp_figure_padding="1dp"
                app:gp_number_of_angles="20"
                app:gp_type="triangle" />



        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

    </LinearLayout>



</RelativeLayout>